Fix: re-positioned soil components after it was broken by hiding the overflow of the lightbulb components

--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ foot: #683c20
     border: 10px solid #fed17e;
     position: relative;
     z-index: 1;
-    /* overflow: hidden; */ 
+    overflow: hidden;
 }
 
 .bulb-rectangle {
@@ -378,7 +378,7 @@ foot: #683c20
     position: relative;
     margin-top: -28px;
     z-index: 1;
-    /* overflow: hidden;*/ 
+    overflow: hidden; 
 }
 
 /* Cap */
@@ -468,7 +468,7 @@ foot: #683c20
     background-color: #683c20;
 }
 
-/* Soil */
+/* Soil 1 - Bulb Circle*/
 .soil1 {
     background-color: #683c20;
     width: 260px;
@@ -482,18 +482,7 @@ foot: #683c20
     border-bottom-left-radius: 250px;
 }
 
-.soil2 {
-    width: 130px;
-    height: 100px;
-    background-color: #683c20;
-    transform: rotate(50deg);
-    position: absolute;
-    bottom: -37px;
-    left: -20px;
-    z-index: 3;
-}
-
-.soil1-chunk1 {
+.soil1-top1 {
     background-color: #98552e;
     width: 80px;
     height: 30px;
@@ -505,7 +494,7 @@ foot: #683c20
     transform: rotate(-10deg);
 }
 
-.soil1-chunk2 {
+.soil1-top2 {
     background-color: #98552e;
     width: 60px;
     height: 40px;
@@ -517,7 +506,7 @@ foot: #683c20
     transform: rotate(-5deg);
 }
 
-.soil1-chunk3 {
+.soil1-top3 {
     background-color: #98552e;
     width: 40px;
     height: 30px;
@@ -528,7 +517,7 @@ foot: #683c20
     left: 105px;
 }
 
-.soil1-chunk4 {
+.soil1-top4 {
     background-color: #98552e;
     width: 65px;
     height: 30px;
@@ -540,7 +529,19 @@ foot: #683c20
     transform: rotate(5deg);
 }
 
-.soil1-chunk5 {
+.soil1-top5 {
+    background-color: #98552e;
+    width: 70px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 4;
+    top: -25px;
+    right: 0px;
+    transform: rotate(10deg);
+}
+
+.soil1-bottom1 {
     background-color: #98552e;
     width: 100px;
     height: 30px;
@@ -552,63 +553,93 @@ foot: #683c20
     transform: rotate(10deg);
 }
 
-/* Soil 2*/
-.soil2-chunk1 {
+.soil1-bottom2 {
+    position: absolute;
     background-color: #98552e;
-    width: 290px;
+    width: 60px;
     height: 30px;
     border-radius: 50%;
-    position: absolute;
-    z-index: 4;
-    bottom: 80px;
-    left: -150px;
-}
-
-.soil2-chunk2 {
-    background-color: #98552e;
-    width: 90px;
-    height: 30px;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 4;
-    top: -20px;
-    right: 5px;
-    transform: rotate(10deg);
-}
-
-.soil2-chunk3 {
-    background-color: #98552e;
-    width: 70px;
-    height: 30px;
-    border-radius: 50%;
-    position: absolute;
-    z-index: 4;
     top: 0;
-    left: -60px;
+    left: 90px;
 }
 
-.soil2-chunk4 {
-    background-color: #98552e;
-    width: 50px;
-    height: 40px;
-    border-radius: 50%;
+.soil1-bottom3 {
     position: absolute;
-    z-index: 4;
-    top: -10px;
+    background-color: #98552e;
+    width: 80px;
+    height: 30px;
+    border-radius: 50%;
+    top: -7px;
+    left: 140px;
+    transform: rotate(-10deg);
+}
+
+.soil1-top-layer {
+    background-color: #98552e;
+    width: 280px;
+    height: 30px;
+    position: absolute;
+    border-radius: 50%;
+    top: -20px;
     left: 0;
 }
 
-.soil2-chunk5 {
+/* Soil 2 - Bulb Rectangle*/
+.soil2 {
+    width: 130px;
+    height: 100px;
+    background-color: #683c20;
+    transform: rotate(50deg);
+    position: absolute;
+    bottom: -37px;
+    left: -20px;
+    z-index: 3;
+}
+
+.soil2-top-layer {
     background-color: #98552e;
-    width: 90px;
+    width: 280px;
     height: 30px;
     border-radius: 50%;
     position: absolute;
-    z-index: 4;
-    top: -10px;
-    left: 30px;
-    transform: rotate(-5deg);
+    top: -20px;
+    left: -140px;
 }
+
+.soil2-bottom1 {
+    position: absolute;
+    background-color: #98552e;
+    width: 80px;
+    height: 30px;
+    border-radius: 50%;
+    top: -7px;
+    left: -15px;
+}
+
+.soil2-bottom2 {
+    position: absolute;
+    background-color: #98552e;
+    width: 55px;
+    height: 20px;
+    border-radius: 50%;
+    top: -4px;
+    right: 15px;
+    transform: rotate(-10deg);
+}
+
+.soil2-top1 {
+    background-color: #98552e;
+    width: 70px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 4;
+    top: -24px;
+    right: 10px;
+    transform: rotate(10deg);
+}
+
+/* 
 
 .plant-base {
     width: 40px;
@@ -622,6 +653,7 @@ foot: #683c20
 }
 
 /* Soil Dots */
+/* 
 .dot-light {
     background-color: #98552e;
     width: 10px;
@@ -630,6 +662,13 @@ foot: #683c20
     position: absolute;
     z-index: 6;
 }
+
+.dot-light.dot1 { bottom: -20px; left: 30px;}
+.dot-light.dot2 { background-color: red; bottom: -35px; left: -10px;}
+.dot-light.dot3 {}
+.dot-light.dot4 {}
+.dot-light.dot5 {}
+.dot-light.dot6 {}
 
 .dot-dark {
     background-color: #683c20;
@@ -646,7 +685,6 @@ foot: #683c20
 .dot-dark.dot4 { top: 10px; left: 0px; }
 .dot-dark.dot5 { top: -0px; right: 30px; }
 .dot-dark.dot6 { top: -5px; left: -160px;}
-
 
 /* Shadow */
 .lightbulb-shadow {
